wui/static/css/main.css
/* ... */
.ez-collapsible .collapsible-header:hover {
    background-color: var(--ez-secondary-action-hover-bg);
}

.ez-collapsible li.active .collapsible-header {
    background-color: var(--ez-secondary-action-hover-bg)
}

.ez-collapsible .collapsible-body {
    padding: 2rem 1rem;
}

@media only screen and (min-width: 500px) {
    .ez-collapsible .collapsible-body {
        padding-left: 3.5rem;
    }
}


ez-tsl-root ez-tabs-header {
    margin-top: 2rem;
}

ez-tsl-tests {
    margin-top: 2rem;
}

ez-tsl-tests ez-tsl-edit-title,
ez-tsl-tests ez-tsl-test-header-right {
    display: none;
}

ez-tsl-tests.editable .ez-collapsible:hover ez-tsl-edit-title,
ez-tsl-tests.editable .ez-collapsible ez-tsl-test-header-right {
    display: flex;
    align-items: center;
}

ez-tsl-test-header-left {
    display: flex;
    align-items: center;
}

.ez-collapsible ez-collapsible-title {
    padding: 0 1rem;
}

ez-tsl-add-test button {
    margin-top: 3rem;
}

ez-tsl-compiler-feedback {
    display: flex;
    margin-top: 2rem;
    padding: 1rem;
    color: #ac7d00;
    background-color: ivory;
    border: 1px solid #ffe18f;
}

ez-tsl-compiler-feedback ez-icon {
    margin: 0 2rem 0 1rem;
    color: #ac7d00;
}

ez-tsl-compiler-feedback ez-icon > svg {
    width: 3rem;
    height: 3rem;
}

ez-tsl-inline-field {
    display: inline-flex;
    margin: 0 1rem;
}

ez-tsl-inline-field .input-field {
    margin-bottom: 0;
}

ez-tsl-field-text-value {
    display: block;
}

ez-tsl-field-text-value .input-field {
    margin: 0 0 3rem 0;
}

ez-tsl-add-button {
    display: flex;
    margin-top: 2rem;
    margin-bottom: 1rem;
}

ez-tsl-section-title {
    display: flex;
    font-size: 1.1em;
    margin-top: 3rem;
    margin-bottom: 1rem;
}


/** Bottom distribution bar **/

.bb-wrap {
    padding-bottom: 0 !important;
}

.bb {
    line-height: 0;
    font-size: 0;
    white-space: nowrap;
    overflow: hidden;
    margin-left: -20px;
    margin-right: -20px;
}

.bb-item {
    display: inline-block;
    height: 20px;
    width: 100%;
}

.bb-item.sm {
    border-width: 3px;
    height: 0;
}

.bb-green {
    border-bottom: 7px solid #4DAB54;
}

.bb-yellow {
    border-bottom: 7px solid #ffd052;
}

.bb-blue {
    border-bottom: 7px solid #688ffd;
}

.bb-grey {
    border-bottom: 7px solid #c1c1c1;
}


/** Page title **/

h3.title {
    margin-bottom: 2rem;
    margin-top: 1.5rem;
    font-size: 2.5rem;
}

@media only screen and (min-width: 600px) {
    h3.title {
        font-size: 2.9rem;
    }
}

.title-wrap {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-left: 1rem;
}

.title-wrap.no-crumb {
    margin-top: 2.5rem;
}

.title-button > .text {
    margin-left: 1rem;
    vertical-align: middle;
    display: none;
}

@media only screen and (min-width: 400px) {
    .title-button > .text {
        display: initial;
    }
}

div.title-wrap > .title-button > i.material-icons {
    font-size: 2rem;
}


/** Card tabs **/

.tabs-wrap {
    text-align: center;
}

.tabs .tab {
    text-transform: none;
}

.tabs .tab a {
    font-size: 1.7rem;
    color: gray;
}

@media only screen and (min-width: 601px) {
    .tabs .tab a {
        font-size: 2.1rem;
    }
}

.tabs .tab a:hover,
.tabs .tab a.active {
    background-color: transparent;
    color: #4DAB54;
}

.tabs .tab a:focus,
.tabs .tab a:focus.active {
    background-color: rgba(77, 171, 84, 0.2);
    outline: none;
}

.tabs .indicator {
    background-color: #4DAB54;
}

.tabs-wrap + .card-content {
    padding: 1.3rem;
    border-top: 1px solid #e2e2e2;
}

@media only screen and (min-width: 601px) {
    .tabs-wrap + .card-content {
        padding: 2.4rem;
    }
}


/** Tabs **/

ez-tabs-header {
    display: flex;
    align-items: center;
}

ez-tabs-header .tabs {
    background-color: transparent;
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none;  /* Internet Explorer 10+ */
}

ez-tabs-header .tabs::-webkit-scrollbar { /* WebKit */
    width: 0;
    height: 0;
}

ez-tabs-header .tabs > .tab > a,
ez-tabs-header .tabs > .tab > a:hover:not(.active) {
    font-size: 1.6rem;
    color: var(--ezc-attr-mutable-col);
}

ez-tabs-header .tabs > .tab > a.active {
    font-weight: 500;
}

ez-tabs-header .tabs > .tab > a:hover {
    background-color: var(--ez-secondary-action-hover-bg);
}

ez-tabs-header .tabs .tab a:focus,
ez-tabs-header .tabs .tab a:focus.active {
    background-color: transparent;
}

ez-tabs-trailer {
    flex-shrink: 0;
}

ez-tabs-content {
    display: block;
}


ez-tabs.toplevel > ez-tabs-header {
    border-bottom: 1px solid var(--ez-border);
    container-type: inline-size;
    container-name: tabs
}

ez-tabs.toplevel > ez-tabs-header .tabs .indicator {
    background-color: var(--ez-green);
}

ez-tabs.toplevel > ez-tabs-header .tabs > .tab > a.active {
    color: var(--ez-green);
}


ez-tabs.subpage > ez-tabs-header .tabs .indicator {
    background-color: var(--ez-tabs-subpage-active);
}

ez-tabs.subpage > ez-tabs-header .tabs > .tab {
    border-bottom: 1px solid var(--ez-border);
}

ez-tabs.subpage > ez-tabs-header .tabs > .tab > a.active {
    color: var(--ez-tabs-subpage-active);
}

ez-tabs .editor-wrapper {
    margin-top: 0;
}


/** Assessment view **/

ez-feedback {
    display: flex;
    flex-direction: column;
    margin-top: 4rem;
}

ez-assessment {
    display: flex;
    flex-direction: column;
    justify-content: start;
    margin-bottom: 2rem;
}

ez-feedback pre {
    font-size: 1.4rem;
    overflow: auto;
}

/* TODO: add prefixes once we're fully migrated to wui3 */
/*ez-assessment*/ pre.feedback {
    padding: 1rem;
    font-size: 1.4rem;
    white-space: normal;
    overflow: auto;
}

/*ez-assessment*/ pre.auto-feedback {
    background-color: #f5f5f5;
    white-space: pre;
}

/*ez-assessment*/ .grade-number {
    font-weight: 500;
}

ez-feedback ez-grade {
    display: flex;
    align-items: center;
    margin-bottom: 1rem;
}
/* ... */

